# karg

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile  Makefile  kernel.ld
.github/workflows/: docs.yml  format.yml
docs/: README.md
include/: ccu.h  compiler.h  config.h  csr.h  de.h  dev.h  dev_table.h  driver.h  elf.h  errno.h  fbcon.h  fd.h  font.h  hang.h  hdmi.h  init.h  intr.h  kalloc.h  kprintf.h  list.h  log.h  math.h  mem.h  module.h  page_alloc.h  platform.h  plic.h  pm.h  proc.h  rv.h  sbi.h  sched.h  sem.h  string.h  syscall.h  time.h  timer.h  trap.h  tty.h  types.h  (+1 more)
include/arch/riscv/: csr.h  sbi.h
include/arch/riscv/common/: arch.h  trap.h
include/drivers/: fb.h  fbcon.h  font.h  ldisc.h  plic.h  tty.h  uart.h  virtio-gpu.h  virtio.h
include/mm/: kalloc.h  page_alloc.h  vm.h
include/module/: init.h  log.h  module.h
include/sync/: sem.h
include/utils/: mem.h  str.h  string.h
src/: ccu.c  de.c  dev.c  dev_table.c  driver.c  elf.c  entry.S  errno.c  fb.c  fbcon.c  fd.c  font.c  hdmi.c  init.c  intr.c  kmain.c  kprintf.c  log.c  page_alloc.c  plic.c  pm.c  proc.S  proc.c  sbi.c  sched.c  sem.c  syscall.c  time.c  timer.c  trap.c  tty.c  uart.c  virtio.c
src/arch/riscv/: intr.c  pm.c  proc.S  proc.c  time.c  timer.c  trap.S  trap.c  vm.c
src/drivers/: fb.c  fbcon.c  font.c  ldisc.c  plic.c  tty.c  uart.c  virtio-gpu.c  virtio.c
src/mm/: kalloc.c  page_alloc.c
src/module/: init.c  log.c
src/sync/: sem.c
src/syscalls/: exit.c  getpid.c  proc.c  read.c  reboot.c  sleep.c  sleepns.c  syscall.c  wait.c  write.c  yield.c
src/utils/: mem.c  str.c
